--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
 
                 <div class="swiper-wrapper">
                     <!-- Slides -->
-                    <div class="swiper-slide"><img src="img/cristianismo.jpg"
+                    <div class="swiper-slide"><img src="img/O_Estranho_Mundo_de_Jack.jpg"
                             alt="Livro sobre apache kafka e spring boot da alura books"></div>
-                    <div class="swiper-slide"><img src="img/destroisonhos.jpg"
+                    <div class="swiper-slide"><img src="img/noiva.jpg"
                             alt="Livro sobre liderança em design da alura books"></div>
-                    <div class="swiper-slide"><img src="img/desconforme-se.jpg"
+                    <div class="swiper-slide"><img src="img/cisne-negro.jpg"
                             alt="Livro sobre javascript assertivo da alurabooks"></div>
                     <div class="swiper-slide"><img src="img/cartas.jpg" alt="Livro Guia front end"></div>
                     <div class="swiper-slide"><img src="img/abolição.jpg" alt="Livro sobre portugol"></div>
@@ -119,7 +119,7 @@
                         <p class="descrição__texto">O estranho mundo de Jack</p>
                     </div>
                     <!-- 2º coluna -->
-                    <img src="img/livrojc.jpg" class="descrição__imagem">
+                    <img src="img/tim-burt.jpg" class="descrição__imagem">
                 </div>
 
                 <!-- 2º linha -->
@@ -147,11 +147,11 @@
 
                 <div class="swiper-wrapper">
                     <!-- Slides -->
-                    <div class="swiper-slide"><img src="img/cartas.jpg"
+                    <div class="swiper-slide"><img src="img/cisne-negro.jpg"
                             alt="Livro sobre apache kafka e spring boot da alura books"></div>
-                    <div class="swiper-slide"><img src="img/cristianismo.jpg"
+                    <div class="swiper-slide"><img src="img/O_Estranho_Mundo_de_Jack.jpg"
                             alt="Livro sobre liderDevocionalnça em design da alura books"></div>
-                    <div class="swiper-slide"><img src="img/destroisonhos.jpg"
+                    <div class="swiper-slide"><img src="img/noiva.jpg"
                             alt="Livro sobre javascript assertivo da alurabooks"></div>
                     <div class="swiper-slide"><img src="img/peregrino.jpg" alt="Livro Guia front end"></div>
                     <div class="swiper-slide"><img src="img/desconforme-se.jpg" alt="Livro sobre portugol"></div>
@@ -195,9 +195,6 @@
     <section class="tópicos">
         <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
         <ul class="tópicos__lista">
-            <li class="tópicos__item">
-                <a href="#" class="tópicos__link"></a>
-            </li>
             <li class="tópicos__item">
                 <a href="#" class="tópicos__link">Firebird</a>
             </li>
